--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:mysql://reservation-test.cvzu4xrxvkdz.eu-south-1.rds.
 spring.datasource.username=admin
 spring.datasource.password=r3xE4V4y10n*T32t
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database=mysql
