--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.username=admin
 spring.datasource.password=r3xE4V4y10n*T32t
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=mysql
+
+# Jwt
+refreshToken.secretKey="secretKey";
+authToken.secretKey="secret";
