--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=r3xE4V4y10n*T32t
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database=mysql
 
+profile.name=admin
+
 # Jwt
 refreshToken.secretKey="secretKey";
 authToken.secretKey="secret";
