--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ profile.name=admin
 # Jwt
 refreshToken.secretKey="secretKey";
 authToken.secretKey="secret";
-jwt.secret="mySecret";
+jwt.secret="secretkey123";
