--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+</dependency>
+		<dependency>
     		<groupId>io.jsonwebtoken</groupId>
     		<artifactId>jjwt</artifactId>
    			 <version>0.2</version>
