prova commit new pc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.database=mysql
 
 profile.name=admin
 
-# Jwt
+# Jwt(token)
 refreshToken.secretKey="secretKey";
 authToken.secretKey="secret";
 jwt.secret="secretkey123";
